Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,6 +48,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTRIBUTING.md  non_normal_dataset.csv  output_20_1.png\r\n",
+      "index.ipynb\t output_16_1.png\t output_5_1.png\r\n",
+      "LICENSE.md\t output_18_1.png\t README.md\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
