--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('n')"
+   ]
   },
   {
    "cell_type": "markdown",
