Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,11 +67,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('non_normal_dataset.csv', squeeze=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('non_normal_dataset.csv', s)\n"
+    "df."
    ]
   },
   {
