--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.d"
+   ]
   },
   {
    "cell_type": "markdown",
