--- a/index.ipynb
+++ b/index.ipynb
@@ -172,11 +172,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NormaltestResult(statistic=43432.811126532004, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "st.normaltest()"
+    "st.normaltest(df)"
    ]
   },
   {
