--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,7 @@
    "outputs": [],
    "source": [
     "def get_sample(data, n):\n",
-    "    np.random.choice(df)\n",
+    "    np.random.choice(df, size=n)\n",
     "\n",
     "test_sample = get_sample(data, 30)\n",
     "print(test_sample[:5]) # [56, 12, 73, 24, 8] (This will change if you run it mutliple times)"
