--- a/index.ipynb
+++ b/index.ipynb
@@ -217,9 +217,8 @@
    "outputs": [],
    "source": [
     "def get_sample(data, n):\n",
-    "    np.random.choice(df, size=n)\n",
-    "\n",
-    "test_sample = get_sample(data, 30)\n",
+    "    return np.random.choice(df, size=n)\n",
+    "test_sample = get_sample(df, 30)\n",
     "print(test_sample[:5]) # [56, 12, 73, 24, 8] (This will change if you run it mutliple times)"
    ]
   },
