--- a/index.ipynb
+++ b/index.ipynb
@@ -212,9 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[56 12 73 24  8]\n"
+     ]
+    }
+   ],
    "source": [
     "def get_sample(data, n):\n",
     "    return np.random.choice(df, size=n)\n",
@@ -238,7 +246,7 @@
    "outputs": [],
    "source": [
     "def get_sample_mean(sample):\n",
-    "    pass\n",
+    "    return npme\n",
     "\n",
     "test_sample2 = get_sample(data, 30)\n",
     "test_sample2_mean = get_sample_mean(test_sample2)\n",
