--- a/index.ipynb
+++ b/index.ipynb
@@ -241,14 +241,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45.3\n"
+     ]
+    }
+   ],
    "source": [
     "def get_sample_mean(sample):\n",
-    "    return npme\n",
+    "    return np.mean(sample)\n",
     "\n",
-    "test_sample2 = get_sample(data, 30)\n",
+    "test_sample2 = get_sample(df, 30)\n",
     "test_sample2_mean = get_sample_mean(test_sample2)\n",
     "print(test_sample2_mean) # 45.3 (This will also change if you run it multiple times)"
    ]
