--- a/index.ipynb
+++ b/index.ipynb
@@ -279,8 +279,9 @@
    "outputs": [],
    "source": [
     "def create_sample_distribution(data, dist_size=100, n=30):\n",
-    "    samples = \n",
+    "    sample_means = []\n",
     "    for _ in range(dist_size):\n",
+    "        \n",
     "        \n",
     "\n",
     "test_sample_dist = create_sample_distribution(data)\n",
