--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
     "def create_sample_distribution(data, dist_size=100, n=30):\n",
     "    sample_means = []\n",
     "    for _ in range(dist_size):\n",
-    "        \n",
+    "        get_sample()\n",
     "        \n",
     "\n",
     "test_sample_dist = create_sample_distribution(data)\n",
