--- a/index.ipynb
+++ b/index.ipynb
@@ -296,9 +296,9 @@
     "        sample = get_sample(data, n)\n",
     "        sample_means.append(get_sample_mean(sample))\n",
     "    return sample_means\n",
-    "print(len(sample_means))\n",
     "test_sample_dist = create_sample_distribution(df)\n",
-    "print(test_sample_dist[:5]) # [54.53333333333333, 60.666666666666664, 37.3, 39.266666666666666, 35.9]"
+    "print(test_sample_dist[:5]) # [54.53333333333333, 60.666666666666664, 37.3, 39.266666666666666, 35.9]\n",
+    "print(len(te))"
    ]
   },
   {
