--- a/index.ipynb
+++ b/index.ipynb
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample"
+    "sample_dist = create_sample_distribution(df, dist_size=10)"
    ]
   },
   {
