Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -315,7 +315,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_dist = create_sample_distribution(df, dist_size=10)"
+    "sample_dist = create_sample_distribution(df, dist_size=10, n=3)\n",
+    "sns.distplot()"
    ]
   },
   {
