--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sample_dist = create_sample_distribution(df, dist_size=10, n=3)\n",
+    "sns.distplot(sample_dist)"
+   ]
   },
   {
    "cell_type": "markdown",
