Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -412,7 +412,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!python"
+   ]
   },
   {
    "cell_type": "markdown",
