Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -409,11 +409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.6.6 :: Anaconda, Inc.\r\n"
+     ]
+    }
+   ],
    "source": [
-    "!python"
+    "!python --version\n"
    ]
   },
   {
