Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -409,20 +409,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.6.6 :: Anaconda, Inc.\r\n"
+      "Python 3.6.6 :: Anaconda, Inc.\n",
+      "conda 4.6.14\n"
      ]
     }
    ],
    "source": [
     "!python --version\n",
-    "!conda "
+    "!conda --version"
    ]
   },
   {
