Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -409,21 +409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.6.6 :: Anaconda, Inc.\n",
-      "conda 4.6.14\n"
+      "Python 3.6.6 :: Anaconda, Inc.\r\n"
      ]
     }
    ],
    "source": [
-    "!python --version\n",
-    "!conda --version"
+    "!python --version"
    ]
   },
   {
