Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -409,19 +409,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python 3.6.6 :: Anaconda, Inc.\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!python --version"
+    "sample_dist = create_sample_distribution(df, dist_size=10, n=3)\n",
+    "sns.distplot(sample_dist)"
    ]
   },
   {
